--- a/src/app/forgot-password/forgot-password.component.css
+++ b/src/app/forgot-password/forgot-password.component.css
@@ -1,5 +1,5 @@
 .fullScreen {
-  background-image: url("src/assets/loginBackground.png");
+  background-image: url("src/assets/HRITFwebpgBG.png");
   background-repeat: no-repeat;
   background-size: cover;
   width: 100%;
