--- a/src/app/search-generate-letter/search-generate-letter.component.html
+++ b/src/app/search-generate-letter/search-generate-letter.component.html
@@ -3,7 +3,7 @@
         <div class="d-flex flex-row">
           <div style="margin: 40px 20px 10px 6%;font-weight: bold;"><p>Prepare Letters by clicking on Prepare Letters button</p></div>
           <button type="button" class="btn btn-primary mt-5" routerLink="/SelectTemplate" role="button" ><span class="text">Prepare letters</span></button>
-          <button type="button" class="btn btn-primary mt-5" routerLink="/edit123" role="button"style="background-color:gray;" ><span class="text">back</span></button>  
+          <button type="button" class="btn btn-primary mt-5" routerLink="/editdetails" role="button"style="background-color:gray;" ><span class="text">back</span></button>  
         </div>
 
         <hr>
@@ -43,83 +43,4 @@
           <div class="loading-spinner"></div>
         </div>
 
-
 </div>
-
-
-        <!-- <h4 style="margin: 20px 0 20px 1%;"> Letters related to  {{ updateForm.get("workerType").value === "Employee" ? "Employee" : "Candidate" }} <span style="color: red;">{{employeeData[0].EMP_NO}}</span> :</h4>
-
-        <div class="employee-list-display">
-        
-            <div class="card-container" *ngIf="lettersData.length > 0">
-                <div class="card" *ngFor="let data of lettersData">
-                  <div class="card-body">
-                    <h5 class="card-title">{{data.LETTER_TYPE}}</h5>
-                    <small style="font-size: x-small;font-weight: 500;">Created date</small>
-                    <p class="card-text">{{data.CREATED_AT | date}}</p>
-                    <div class="card-actions">
-                      <button style="margin: 4%;border: none;font-size: 25px;background-color: #cae0f4;" (click)="view(data.EMP_NO, data.TEMPLATE_ID, data.LETTER_TYPE)">
-                        <i class="fa-solid fa-download"></i>
-                      </button>&nbsp;&nbsp;
-                      <button style="margin: 4%;border: none;font-size: 25px;background-color: #cae0f4;" (click)="deleteLetter(data.EMP_ID, data.TEMPLATE_ID)">
-                        <i class="fa-solid fa-trash"></i>
-                      </button>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div *ngIf="lettersData.length === 0">
-                <p class="paragraph">No letters data found for this Employee.</p>
-              </div>
-        </div> -->
-
-
-
-
-<!-- <div>
-      <h5 id="empheading">Search generated letters :</h5>
-
-      <div class="search-bar">
-
-        <input type="text" id="filterInput" name="filterInput" placeholder="Search by Employee Number" [(ngModel)]="searchElement" (input)="filer($event)">
-
-        <div *ngIf="userData.ROLE==='Admin'">
-            <button class="btn btn-primary " type="submit" role="button" routerLink="/addTemplate"><b><span class="text">Add Template</span></b></button>
-        </div>&nbsp;&nbsp;&nbsp;&nbsp;
-
-        <div [ngClass]="getRoleClass(userData.ROLE)">
-            <button type="submit" class="btn btn-primary" role="button" routerLink="/SelectTemplate"><b><span class="text">Prepare Letter</span></b></button>
-        </div>
-
-    </div>
-
-  <hr style="width: 100%; border: 2px solid #948d8d;">
-
-  <h6 style="margin: 10px 0 10px 5%;">Note: Search letters by Employee number / Candidate number and results will appear below :</h6>
-
-  <div class="employee-list-display" *ngIf="isSearched">
-
-      <h5 style="margin: 1% 0 2% 6%;">Results :</h5>
-
-      <div class="card-container" *ngIf="displayedLetters.length > 0">
-          <div class="card" *ngFor="let data of displayedLetters">
-            <div class="card-body">
-              <h5 class="card-title">{{data.LETTER_TYPE}}</h5>
-              <p class="card-text">{{data.EMP_NO}}</p>
-              <div class="card-actions">
-                <button style="margin: 4%;border: none;font-size: 25px;background-color: #cae0f4;" (click)="view(data.EMP_NO, data.TEMPLATE_ID, data.LETTER_TYPE)">
-                  <i class="fa-solid fa-download"></i>
-                </button>&nbsp;&nbsp;
-                <button style="margin: 4%;border: none;font-size: 25px;background-color: #cae0f4;"  (click)="deleteLetter(data.EMP_ID, data.TEMPLATE_ID)">
-                  <i class="fa-solid fa-trash"></i>
-                </button>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div *ngIf="displayedLetters.length === 0">
-          <p class="paragraph">No letters data found in the database. Please click on Prepare Letter.</p>
-        </div>
-  </div>
-
-</div> -->
