--- a/src/app/search-generate-letter/search-generate-letter.component.html
+++ b/src/app/search-generate-letter/search-generate-letter.component.html
@@ -23,7 +23,7 @@
                 <td style="text-align: center;">{{ lettersData.indexOf(data)+1}}</td>
                 <td style="text-align: center;">{{ data?.LETTER_TYPE }}</td>
                 <td style="text-align: center;">{{ data?. CREATED_AT| date }}</td>
-                <td style="text-align: center;"><button style="margin: 1%;border: none;font-size: 25px;background-color: aliceblue;" (click)="view()">
+                <td style="text-align: center;"><button style="margin: 1%;border: none;font-size: 25px;background-color: aliceblue;" (click)="view(data.LETTER_TYPE)">
                   <i class="fa-solid fa-download"></i>
                 </button>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                 <button style="margin: 1%;border: none;font-size: 25px;background-color: aliceblue;" (click)="deleteLetter(data.EMP_ID, data.TEMPLATE_ID)">
