--- a/src/app/forgot-password/forgot-password.component.css
+++ b/src/app/forgot-password/forgot-password.component.css
@@ -10,6 +10,7 @@
   width: 100%;
   max-width: 270px;
   margin-left: -35%;
+  margin-top: 20% !important;
 }
 
 .card {
@@ -21,7 +22,7 @@
   border: 1px solid white;
   border-radius: 20px;
   opacity: 0.8;
-  margin: 5% -4% 0 20%;
+  margin: 10% -4% 0 20%;
 }
 
 h3 {
