--- a/src/app/login/barcode/barcode.component.css
+++ b/src/app/login/barcode/barcode.component.css
@@ -2,11 +2,12 @@
   width: 100%;
   height: 100vh;
   background-color: #f5f5f5;
+  overflow-y: auto;
 }
 
 .logo{
-  width: 60%;
-  margin:40% 0 0 15%;
+  width: 50%;
+  margin:40% 0 0 20%;
 }
 
 .align-items{
@@ -20,10 +21,16 @@
   padding: 2%;
   background-color: white;
   width: 300%;
-  height: 90vh;
-  margin:3% 10% 0 0;
+  height: 75vh;
+  margin:6% 10% 0 0;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1), 0 6px 20px rgba(0, 0, 0, 0.1);
   /* overflow: auto; */
+}
+
+.input-otp{
+  display:flex;
+  flex-direction:row; 
+  justify-content:center;
 }
 
 input.form-control {
