--- a/src/app/login/barcode/barcode.component.html
+++ b/src/app/login/barcode/barcode.component.html
@@ -1,23 +1,27 @@
 <div class="main-container">
+
   <div class="align-items">
+
     <div>
       <img src="../../../assets/HRIT logo 5.png" alt="HRITF-logo" class="logo">
     </div>
 
     <div class="card content">
-      <div class="mb-2 text-center"><h4>Enable multi-factor authentication</h4></div>
-      <div class="mb-1"><h6>Each time you log in, you will use an authenticator app to generate a one-off code.</h6></div>
-      <div class="mb-1"><h6>Step 1: Scan the QR code with your authenticator app</h6></div>
-      <div class="mb-1"><img [src]="imageUrl" alt="QR Code" style="width: 32%; margin-left: 30%;"></div>
-      <div class="mb-1"><h6>If you can't scan the QR code enter this code in your authenticator app </h6></div>
-      <div class="mb-2">Secret code: <span style="font-weight: bold;">{{Secret}}</span></div>
+
+      <div class="mb-2 text-center"><h5>Enable multi-factor authentication</h5></div>
+      <div class="mb-1"><h6 style="font-size: 13px;">Each time you log in, you will use an authenticator app to generate a one-off code.</h6></div>
+      <div class="mb-1"><h6 style="font-size: 13px;">Step 1: Scan the QR code with your authenticator app</h6></div>
+      <div class="mb-1"><img [src]="imageUrl" alt="QR Code" style="width: 30%; margin-left: 35%;"></div>
+      <div class="mb-1"><h6 style="font-size: 13px;">If you can't scan the QR code enter this code in your authenticator app </h6></div>
+      <div class="mb-2" style="font-size: 13px;">Secret code: <span style="font-weight: bold;">{{Secret}}</span></div>
 
       <label for="authCode" class="mb-1">Enter authentication code:</label>
 
       <form [formGroup]="barcodeotppage" (ngSubmit)="mfc()">
-        <div class="d-flex flex-row justify-content-center">
+
+        <div class="input-otp">
           <div>
-            <input [type]="otpTypes[0]" #txt1 maxlength="1" (keyup)="move($event, '', txt1, txt2, 0)" formControlName="otp1" class="form-control" autofocus>
+            <input autofocus [type]="otpTypes[0]" #txt1 maxlength="1" (keyup)="move($event, '', txt1, txt2, 0)" formControlName="otp1" class="form-control">
           </div>
           <div>
             <input [type]="otpTypes[1]" #txt2 maxlength="1" (keyup)="move($event, txt1, txt2, txt3, 1)" formControlName="otp2" class="form-control">
@@ -35,11 +39,15 @@
             <input [type]="otpTypes[5]" #txt6 maxlength="1" (keyup)="move($event, txt5, txt6, '', 5)" formControlName="otp6" class="form-control">
           </div>
         </div>
+
         <div class="d-flex flex-row">
           <button class="btn btn-danger" role="button" type="submit"><span class="text">Enable</span></button>&nbsp;&nbsp;
           <div *ngIf="loading" class="spinner"></div>   
         </div>
       </form>
+
     </div>
+
   </div>
+
 </div>
