--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -10,6 +10,7 @@
   width: 100%;
   max-width: 270px;
   margin-left: -35%;
+  margin-top: 20% !important;
 }
 
 .card {
@@ -21,7 +22,7 @@
   border: 1px solid white;
   border-radius: 20px;
   opacity: 0.8;
-  margin: 20% 0 0 10%;
+  margin: 30% 0 0 10%;
 }
 
 h1 {
