--- a/src/app/login/mfaOTP/mfaOTP.component.css
+++ b/src/app/login/mfaOTP/mfaOTP.component.css
@@ -2,11 +2,12 @@
   width: 100%;
   height: 100vh;
   background-color: #f5f5f5;
+  overflow-y: auto;
 }
 
 .logo{
-  width: 60%;
-  margin:40% 0 0 15%;
+  width: 50%;
+  margin:40% 0 0 20%;
 }
 
 .align-items{
