--- a/src/app/view-employees/edit-details/edit-details.component.css
+++ b/src/app/view-employees/edit-details/edit-details.component.css
@@ -329,3 +329,49 @@ select {
   font-weight: bold;
   margin-top: 2%;
 }
+
+
+
+/* Style for the form sections */
+.form-section {
+  margin-bottom: 1em;
+}
+
+/* Style for labels */
+.form-label {
+  display: block;
+  margin-bottom: 0.5em;
+  font-weight: bold;
+}
+
+/* Style for input fields */
+.input-field {
+  width: 100%;
+  padding: 0.5em;
+  box-sizing: border-box;
+}
+
+/* Style for textarea fields */
+.textarea-field {
+  width: 80%;
+  padding: 0.5em;
+  box-sizing: border-box;
+  min-height: 100px; /* Adjust as needed for better readability */
+}
+
+/* Style for submit button */
+.submit-button {
+  padding: 0.7em 1.5em;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  border-radius: 0.3em;
+  cursor: pointer;
+}
+
+.submit-button:hover {
+  background-color: #0056b3;
+}
+
+
+
