--- a/src/app/notifications/notifications.component.html
+++ b/src/app/notifications/notifications.component.html
@@ -40,7 +40,7 @@
                     <tr *ngFor="let empData of oneyearcompletionarr">
                         <td>{{empData.EMP_NO}}</td>
                         <td>{{empData.FIRST_NAME}} {{empData.LAST_NAME}}</td>
-                        <td>{{empData.confirmation_date | date}}</td>
+                        <td>{{empData.conformationdate | date}}</td>
                         <td>{{empData.msg}}</td>
                     </tr>
                 </table>
