--- a/src/app/otp/reset/reset.component.css
+++ b/src/app/otp/reset/reset.component.css
@@ -204,3 +204,25 @@ li{
     max-width: 70%;
   }
 }
+
+@media (max-width: 1292px) {
+  .container {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .card {
+    margin-top: 100px;
+    margin-left: 0;
+    max-width:36%; 
+  }
+
+  .logo-img {
+    position: absolute;
+    top:-10%;
+    margin-top: 10% !important;
+    margin-left: 0;
+    max-width: 20%;
+  }
+}
+
