--- a/src/app/add-employee/add-employee.component.css
+++ b/src/app/add-employee/add-employee.component.css
@@ -33,6 +33,7 @@ label {
 input[type="text"],
 input[type="date"],
 input[type="email"],
+input[type="number"],
 select {
   width: calc(100% - 0px); /* Adjust width to include border and margin */
   padding: 8px;
