--- a/src/app/Components/EmployementDetails/EmployementDetails.component.html
+++ b/src/app/Components/EmployementDetails/EmployementDetails.component.html
@@ -267,7 +267,9 @@
           {{ num.EFFECTIVE_END_DATE | date:'yyyy-MM-dd' }}
         </td>
         <td style="border: 1px solid #ddd; padding: 8px; text-align: center;">
-          <div *ngFor="let data of num?.CHANGED_ATTRIBUTE"> {{ data.CHANGED_ATTRIBUTE }}</div>
+          <ul style="list-style-type: none; padding: 0; margin: 0;">
+            <li *ngFor="let data of num.CHANGED_ATTRIBUTE">{{ data }}</li>
+          </ul>
         </td>
         <td style="border: 1px solid #ddd; padding: 8px; text-align: center;">
           {{ num.LAST_UPDATED_BY }}
